Fixed potential misalignment of checked marker in checkbox & radio inputs (happened when changing padding)

--- a/src/elements/input.checkbox.css
+++ b/src/elements/input.checkbox.css
@@ -4,6 +4,7 @@ input[type=checkbox] {
 	width: 1em;
 	height: 1em;
 	margin: 0;
+	padding: 0;
 }
 
 input[type=checkbox]:enabled {
@@ -16,6 +17,7 @@ input[type=checkbox]:disabled {
 
 input[type=checkbox]:checked::after {
 	position: absolute;
+	top: 25%;
 	left: 25%;
 	width: 50%;
 	height: 50%;
