--- a/src/elements/input.radio.css
+++ b/src/elements/input.radio.css
@@ -4,6 +4,7 @@ input[type=radio] {
 	width: 1em;
 	height: 1em;
 	margin: 0;
+	padding: 0;
 	border-radius: 50%;
 }
 
@@ -17,6 +18,7 @@ input[type=radio]:disabled {
 
 input[type=radio]:checked::after {
 	position: absolute;
+	top: 25%;
 	left: 25%;
 	width: 50%;
 	height: 50%;
